--- a/index.htm
+++ b/index.htm
@@ -159,6 +159,25 @@
 
             }
 
+            box.homePage.btnLive = createButton();
+            box.homePage.add(that);
+            that.right = 20;
+            that.top = box.homePage.header.height + 20;
+            that.text = "LIVE";
+            // that.color = "orangered";
+            that.color = "rgba(255, 255, 255, 0.15)";
+            that.border = 2;
+            // that.borderColor = "rgba(0, 0, 0, 0.4)";
+            // that.textColor = "rgba(0, 0, 0, 0.6)";
+            that.borderColor = "orangered";
+            that.textColor = "orangered";
+            that.minimal = 1;
+            that.round = 12;
+            that.width = 70;
+            that.height = 30;
+            that.opacity = 0.7;
+            that.fontSize = 18;
+
             /*
             box.homePage.header = createBox(0, 0, 1000, 600)
             box.homePage.add(that)
