--- a/00C-empty-project-template.htm
+++ b/00C-empty-project-template.htm
@@ -13,9 +13,11 @@
 
         <style>
 
-            body {
-                overflow: hidden;
-            }
+        /* 
+        body {
+            overflow: auto !important;
+        }
+        */
 
         </style>
 
