--- a/ex1.htm
+++ b/ex1.htm
@@ -55,8 +55,16 @@
 
         // BUTTON: First Button. Parameters: (left, top, width, height)
         btnBlue = createButton(40, 40, 180, 50)
-        that.text = "First Button"
+        that.text = "HELLO"
         that.minimal = 1
+        //that.round = 14
+        //that.border = 3
+        //that.borderColor = "rgba(0, 0, 0, 0.1)"
+        //that.buttonElement.style.fontFamily = "opensans-bold"
+        //that.fontSize = 22
+        //that.textColor = "rgba(0, 0, 0, 0.7)"
+        //that.width = "auto"
+        //that.spaceX = 20
         //that.color = "orangered"
 
         that.onClick(printHelloWorld)
