--- a/index.htm
+++ b/index.htm
@@ -237,7 +237,7 @@
             // LABEL: Project #1 button.
             box.homePage.footer.btnGroup.btn2 = createLabel(0, 0, 121, 44)
             box.homePage.footer.btnGroup.add(that)
-            that.text = "Project #1"
+            that.text = "Project 1"
             footerButtonStyle(that)
             that.element.style.marginLeft = "10px"
             that.onClick(function() {
@@ -254,7 +254,7 @@
             // LABEL: Project #2 button.
             box.homePage.footer.btnGroup.btn3 = createLabel(0, 0, 121, 44)
             box.homePage.footer.btnGroup.add(that)
-            that.text = "Project #2"
+            that.text = "Project 2"
             footerButtonStyle(that)
             that.element.style.marginLeft = "10px"
             that.onClick(function() {
@@ -270,7 +270,7 @@
             // LABEL: ShowCase #1 button.
             box.homePage.footer.btnGroup.btn4 = createLabel(0, 0, 148, 44)
             box.homePage.footer.btnGroup.add(that)
-            that.text = "ShowCase #1"
+            that.text = "ShowCase 1"
             footerButtonStyle(that)
             that.element.style.marginLeft = "10px"
             that.onClick(function() {
@@ -286,7 +286,7 @@
             // LABEL: ShowCase #2 button.
             box.homePage.footer.btnGroup.btn5 = createLabel(0, 0, 148, 44)
             box.homePage.footer.btnGroup.add(that)
-            that.text = "ShowCase #2"
+            that.text = "ShowCase 2"
             footerButtonStyle(that)
             that.element.style.marginLeft = "10px"
             that.onClick(function() {
