--- a/06-center.htm
+++ b/06-center.htm
@@ -13,13 +13,11 @@
 
         <script>
     
-        // Box object name.
-        var box
-
+        // First running function.
         var start = function() {
             
             // BOX: Orangered box.
-            box = createBox()
+            page.box = createBox()
             that.width = 120
             that.height = 120
             that.color = "orangered"
