--- a/ex6.htm
+++ b/ex6.htm
@@ -44,13 +44,11 @@
     <body>
         
 <div id="code-example" style="display:none">
-    // Box object name.
-    var box
-
+    // First running function.
     var start = function() {
         
         // BOX: Orangered box.
-        box = createBox()
+        page.box = createBox()
         that.width = 120
         that.height = 120
         that.color = "orangered"
