--- a/index.htm
+++ b/index.htm
@@ -324,6 +324,7 @@
             that.text = "Developed by <b onclick='gotoBugraSite();' style='cursor: pointer;'>Bugra Ozden</b><br>Licensed under <b>CC 4.0</b>"
             that.fontSize = 12
             that.opacity = 0.8
+            that.clickable = 1
             that.textAlign = "center"
             that.center("left")
 
