--- a/index.htm
+++ b/index.htm
@@ -77,6 +77,8 @@
 
         var start = function() {
 
+            page.fit(1000);
+
             window.box = createBox(0, 0, page.width, page.height)
             that.color = "black"
             that.scrollY = 1
@@ -90,7 +92,7 @@
             that.color = "transparent"
             movingCircles.create(box.boxUpBackground)
 
-            box.homePage = createBox(0, 0, 1000, 10900)
+            box.homePage = createBox(0, 0, 1000, 10200)
             that.color = "transparent"
             that.center("left")
 
@@ -101,8 +103,33 @@
 
             box.homePage.header.imgLogo = createImage(380, 125, 255, 142) // 255 x 142 - 170 X 94
             box.homePage.header.add(that)
-            that.load("images/basicjs-logo.svg")
+            that.load("images/basicjs-noship-logo.svg")
             that.center("left")
+
+            box.homePage.header.imgShip = createImage(422, 126, 59, 35) // 255 x 142 - 170 X 94
+            box.homePage.header.add(that)
+            that.load("images/ship.svg")
+            that.setMotion("transform 2s");
+
+            const moveShip = () => {
+
+                box.homePage.header.imgShip.withMotion(() => {
+                    box.homePage.header.imgShip.rotate = 8;
+                });
+
+                setTimeout(function() {
+
+                    box.homePage.header.imgShip.rotate = -8;
+
+                    setTimeout(function() {
+                        moveShip();
+                    }, 2000);
+
+                }, 2000);
+
+            }
+
+            //moveShip();
 
             box.homePage.header.lblDescription = createLabel(44, 306, 935, 150)
             box.homePage.header.add(that)
@@ -127,12 +154,12 @@
             that.right = 20
             that.top = 30
             that.onClick(function() {
-                go("https://bug7a.github.io/cordova-mobile-app-ui-template/", "_blank")
+                go("https://bug7a.github.io/javascript-mobile-app-template/", "_blank")
             })
 
             box.homePage.header.btn1 = createLabel(0, 470, "auto", "auto")
             box.homePage.header.add(that)
-            that.text = "<b>Handbook</b> v1.7.2"
+            that.text = "<b>Handbook</b> v1.7.4"
             that.color = "rgba(0, 0, 0, 0.05)"
             that.round = 6
             that.fontSize = 24
@@ -167,19 +194,19 @@
                 box.homePage.header.btn2.aline(box.homePage.header.btn1, "right", 20)
             })
 
-            var exampleHeightList = [550, 2550, 1350, 550, 550, 550, 550, 550, 550, 650, 550];
+            var exampleHeightList = [650, 1650, 550, 550, 550, 550, 600, 550, 750, 550, 1350];
             var exampleNameList = [ 
                 "First example:", 
-                "Custom component, based on JSON data:", 
-                "Alternative usage with HTML template and CSS:",
+                "Custom component with JSON data:", 
                 "Button example:", 
                 "Label example:", 
-                "Image example:", 
-                "TextBox example:", 
+                "Icon example:", 
+                "Input example:", 
                 "Box example:", 
                 "Motion Example:", 
                 ".center() and .aline() methods:", 
-                "startBox() and startFlexBox() usage:",
+                "Autolayout group example:",
+                "Alternative usage with HTML template and CSS:",
             ];
 
             for (var i = 0; i <= 10; i++) {
@@ -315,7 +342,7 @@
             footerButtonStyle(that)
             that.element.style.marginLeft = "10px"
             that.onClick(function() {
-                go("https://bug7a.github.io/cordova-mobile-app-ui-template/", "_blank")
+                go("https://bug7a.github.io/javascript-mobile-app-template/", "_blank")
             })
 
             /*
@@ -343,7 +370,7 @@
             // LABEL: Info.
             box.homePage.footer.lblInfo = createLabel(0, 275, 600, 100)
             box.homePage.footer.add(that)
-            that.text = "Copyright 2020-2023 <b onclick='gotoBugraSite();' style='cursor: pointer;'>Bugra Ozden</b><br>Licensed under <b onclick='gotoLicenses();' style='cursor: pointer;'>the Apache License</b>, Version 2.0"
+            that.text = "Copyright 2020-2024 <b onclick='gotoBugraSite();' style='cursor: pointer;'>Bugra Ozden</b><br>Licensed under <b onclick='gotoLicenses();' style='cursor: pointer;'>the Apache License</b>, Version 2.0"
             that.fontSize = 12
             that.opacity = 0.8
             that.clickable = 1
@@ -357,6 +384,8 @@
         }
         
         var pageResized = function() {
+
+            page.fit(1000);
                      
             box.width = page.width
             box.height = page.height
@@ -373,7 +402,7 @@
         }
 
         const gotoBugraSite = function() {
-            window.open("https://bugraozden.com/", "_blank");
+            window.open("https://bug7a.github.io/", "_blank");
         }
 
         const gotoLicenses = function() {
