--- a/01-first-example.htm
+++ b/01-first-example.htm
@@ -19,7 +19,7 @@
         let clickedCount = 0;
             
         // First running function.
-        window.onload = () => {
+        window.onload = function() {
         
             // GROUP: Autolayout (Default: centered)
             startFlexBox();
