--- a/03-button.htm
+++ b/03-button.htm
@@ -16,7 +16,7 @@
         let btnBlue;
             
         // First running function.
-        window.onload = () => {
+        window.onload = function() {
 
             // BUTTON: First Button. Parameters: (left, top, width, height, props)
             btnBlue = Button(40, 40, 180, 50, { 
@@ -36,7 +36,7 @@
 
         };
 
-        const printHelloWorld = () => {
+        const printHelloWorld = function() {
             println("Hello World");
         };
 
