--- a/04-label.htm
+++ b/04-label.htm
@@ -16,7 +16,7 @@
         let lblBottomInfo;
         
         // First running function.
-        window.onload = () => {
+        window.onload = function() {
             
             // LABEL: Bottom Info.
             lblBottomInfo = Label({
