--- a/10-autolayout-group.htm
+++ b/10-autolayout-group.htm
@@ -14,7 +14,7 @@
         <script>
 
         // First running function.
-        window.onload = () => {
+        window.onload = function() {
 
             page.color = "whitesmoke";
 
