--- a/02-custom-component-with-JSON.htm
+++ b/02-custom-component-with-JSON.htm
@@ -50,6 +50,7 @@
                             } else {
                                 _item.selected = 1;
                                 _item.elem.style.filter = "grayscale(100%)";
+                                println(_item.id);
                             }
                         });
 
