--- a/00C-empty-project-template.htm
+++ b/00C-empty-project-template.htm
@@ -12,6 +12,7 @@
         <link rel="preload" href="basic/font/open-sans/OpenSans-Regular.ttf" as="font" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="basic/basic.min.css">
         <script src="basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
+        <!--<script src="basic/scroll-bar.min.js" type="text/javascript" charset="utf-8"></script>-->
 
         <style>
 
