--- a/03-button.htm
+++ b/03-button.htm
@@ -28,11 +28,11 @@
                 //fontSize: 22,
                 //textColor: "rgba(0, 0, 0, 0.7)",
                 //width: "auto",
-                //spaceX: 20,
+                //padding: [20, 0],
                 //color: "orangered",
             });
             //that.elem.style.fontFamily = "opensans-bold";
-            that.onClick(printHelloWorld);
+            that.on("click", printHelloWorld);
 
         };
 
