--- a/05-icon.htm
+++ b/05-icon.htm
@@ -24,7 +24,7 @@
                 top: 20,
                 width: 128,
                 height: 128,
-                space: 15,
+                padding: 15,
                 color: "rgba(0, 0, 0, 0.05)",
             });
             //that.autoSize = 1;
