--- a/13-custom-scrollbar.htm
+++ b/13-custom-scrollbar.htm
@@ -28,7 +28,7 @@
         <script>
         
         // VARIABLES
-        let box = null;
+        let box;
 
         // First running function.
         window.onload = function() {
