--- a/04-label.htm
+++ b/04-label.htm
@@ -28,7 +28,7 @@
                 textAlign: "center",
                 color: "gold",
                 textColor: "rgba(0, 0, 0, 0.4)",
-                spaceY: 10,
+                padding: [0, 10],
             });
             
         }
