--- a/07-box.htm
+++ b/07-box.htm
@@ -26,7 +26,9 @@
                 color: "orangered",
             });
             that.clickedCount = 0;
-            that.onClick(increaseCount);
+            that.on("click", function(event) {
+                increaseCount(box);
+            });
 
             // LABEL: Box name text.
             box.lblName = Label({
