--- a/10-autolayout-group.htm
+++ b/10-autolayout-group.htm
@@ -20,7 +20,7 @@
 
             // GROUP: Autolayout (Default: centered)
             AutoLayout({
-                flow: "horizontal", // "vectorial"
+                flow: "horizontal", // "vertical"
                 align: "center", // "top left", "center right"
                 gap: 10,
                 padding: 0, // [0, 0, 0, 0]
