--- a/01-basic-sample-m1/05-icon.htm
+++ b/01-basic-sample-m1/05-icon.htm
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
         <!-- LIBRARY FILES -->
-        <link rel="stylesheet" type="text/css" href="basic/basic.min.css">
-        <script src="basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" type="text/css" href="../basic/basic.min.css">
+        <script src="../basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
 
         <script>
 
@@ -28,7 +28,7 @@
                 color: "rgba(0, 0, 0, 0.05)",
             });
             //that.autoSize = 1;
-            that.load("assets/strawberry.png");
+            that.load("../assets/fruids/havuc.png");
             that.onLoad(printIconSizes);
             
         };
