--- a/01-basic-sample-m1/11-html-template-css.htm
+++ b/01-basic-sample-m1/11-html-template-css.htm
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
         <!-- LIBRARY FILES -->
-        <link rel="stylesheet" type="text/css" href="basic/basic.min.css">
-        <script src="basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" type="text/css" href="../basic/basic.min.css">
+        <script src="../basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
 
         <style>
 
@@ -85,10 +85,10 @@
         <script>
         
         let plantItemDataList = [
-            { id: "1", name: "Broccoli", description: "Vegetable", iconPath: "assets/broccoli.png" },
-            { id: "2", name: "Strawberry", description: "Fruit", iconPath: "assets/strawberry.png" },
-            { id: "3", name: "Carrot", description: "Vegetable", iconPath: "assets/carrot.png" },
-            { id: "4", name: "Blueberries", description: "Fruit", iconPath: "assets/blueberries.png" },
+            { id: "1", name: "Broccoli", description: "Vegetable", iconPath: "../assets/fruids/brokoli.png" },
+            { id: "2", name: "Strawberry", description: "Fruit", iconPath: "../assets/fruids/cilek.png" },
+            { id: "3", name: "Carrot", description: "Vegetable", iconPath: "../assets/fruids/havuc.png" },
+            { id: "4", name: "Blueberries", description: "Fruit", iconPath: "../assets/fruids/yabanmersini.png" },
         ];
 
         let plantItemList = [];
