--- a/01-basic-sample-m1/00-empty-project-template.htm
+++ b/01-basic-sample-m1/00-empty-project-template.htm
@@ -9,21 +9,10 @@
 
         <!-- LIBRARY FILES -->
         <!-- <link rel="preload" href="image.png" as="image"> -->
-        <link rel="preload" href="basic/font/open-sans/OpenSans-Regular.ttf" as="font" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="basic/basic.min.css">
-        <script src="basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
-        <!--<script src="basic/scroll-bar.min.js" type="text/javascript" charset="utf-8"></script>-->
-
-        <style>
-
-        /* 
-        body {
-            margin: 0px !important;
-            overflow: hidden !important;
-        }
-        */
-
-        </style>
+        <link rel="preload" href="../basic/font/open-sans/OpenSans-Regular.ttf" as="font" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="../basic/basic.min.css">
+        <script src="../basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
+        <!--<script src="../basic/scroll-bar.min.js" type="text/javascript" charset="utf-8"></script>-->
 
         <script>
         
