--- a/01-basic-sample-m1/07-box.htm
+++ b/01-basic-sample-m1/07-box.htm
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
         <!-- LIBRARY FILES -->
-        <link rel="stylesheet" type="text/css" href="basic/basic.min.css">
-        <script src="basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" type="text/css" href="../basic/basic.min.css">
+        <script src="../basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
 
         <script>
 
@@ -26,7 +26,7 @@
                 color: "orangered",
             });
             that.clickedCount = 0;
-            that.on("click", function(event) {
+            that.on("click", function(self, event) {
                 increaseCount(box);
             });
 
