--- a/01-basic-sample-m1/08-motion.htm
+++ b/01-basic-sample-m1/08-motion.htm
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
         <!-- LIBRARY FILES -->
-        <link rel="stylesheet" type="text/css" href="basic/basic.min.css">
-        <script src="basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" type="text/css" href="../basic/basic.min.css">
+        <script src="../basic/basic.min.js" type="text/javascript" charset="utf-8"></script>
 
         <script>
 
@@ -27,7 +27,7 @@
             that.center();
             // When there is a change, soften it with movement.
             that.setMotion("left 0.3s, top 0.3s, width 0.3s, height 0.3s");
-            that.on("click", function(event) {
+            that.on("click", function(self, event) {
                 extendBox(box);
             });
             
