--- a/01-basic-sample-m1/02-custom-component-with-JSON.htm
+++ b/01-basic-sample-m1/02-custom-component-with-JSON.htm
@@ -14,10 +14,10 @@
         <script>
 
         const itemDataList = [
-            { id: "1", label: "Broccoli", desc: "Vegetable", icon: "../assets/fruids/brokoli.png" },
-            { id: "2", label: "Strawberry", desc: "Fruit", icon: "../assets/fruids/cilek.png" },
-            { id: "3", label: "Carrot", desc: "Vegetable", icon: "../assets/fruids/havuc.png" },
-            { id: "4", label: "Blueberries", desc: "Fruit", icon: "../assets/fruids/yabanmersini.png" },
+            { id: "1", label: "Broccoli", desc: "Vegetable", icon: "assets/broccoli.png" },
+            { id: "2", label: "Strawberry", desc: "Fruit", icon: "assets/strawberry.png" },
+            { id: "3", label: "Carrot", desc: "Vegetable", icon: "assets/carrot.png" },
+            { id: "4", label: "Blueberries", desc: "Fruit", icon: "assets/blueberries.png" },
         ];
         let itemList = [];
         let containerBox;
